--- a/LocationModifier2/Dialogs/StockEntry.xaml
+++ b/LocationModifier2/Dialogs/StockEntry.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LocationModifier2.Dialogs"
         mc:Ignorable="d"
-        Title="StockEntry" Height="450" Width="450" ResizeMode="NoResize" WindowStyle="None">
+        Title="StockEntry" Height="450" Width="450" ResizeMode="NoResize" WindowStyle="None" WindowStartupLocation="CenterScreen">
     <Grid Background="#FF0E0099">
         <Grid.RowDefinitions>
             <RowDefinition Height="39*"/>
