--- a/LocationModifier2/MainWindow.xaml
+++ b/LocationModifier2/MainWindow.xaml
@@ -34,14 +34,21 @@
                 <TextBlock x:Name="OtherLocationsBlock" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Center" FontSize="64"/>
             </Grid>
             <TextBox x:Name="ScanBox" Margin="10,10,40,10" TextWrapping="Wrap" Grid.ColumnSpan="2" FontSize="34" KeyDown="ScanBox_KeyUp"/>
-            <ScrollViewer x:Name="HistoryScroller" Grid.Row="2" Grid.RowSpan="2" PanningMode="Both" VerticalScrollBarVisibility="Hidden" Margin="0,0,9.5,0">
+            <ScrollViewer x:Name="HistoryScroller" Grid.Row="2" Grid.RowSpan="2" PanningMode="Both" VerticalScrollBarVisibility="Hidden">
                 <TextBlock x:Name="HistoryBlock" TextWrapping="Wrap" ScrollViewer.VerticalScrollBarVisibility="Hidden" FontSize="24" FontFamily="Lucida Console"/>
             </ScrollViewer>
-            <TextBlock x:Name="InstructionBox" Margin="10" Grid.Row="1" TextWrapping="Wrap" Grid.ColumnSpan="2" FontSize="72" Text="Please scan your ID card" TextAlignment="Center" MinWidth="800"/>
-            <TextBlock x:Name="CurrentMode" Grid.Column="2" Margin="10" Grid.Row="1" TextWrapping="Wrap" TextAlignment="Center" FontSize="60"/>
+            <Grid Grid.Row="1" Grid.ColumnSpan="3">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="17*"/>
+                    <ColumnDefinition Width="3*"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock x:Name="InstructionBox" TextWrapping="Wrap" FontSize="72" Text="Please scan your ID card" TextAlignment="Center" MinWidth="800"/>
+                <TextBlock x:Name="CurrentMode" TextWrapping="Wrap" TextAlignment="Center" FontSize="60" Text="View" Grid.Column="1"/>
+            </Grid>
+
             <TextBlock x:Name="EmployeeBlock" Grid.Column="2" Margin="10" TextWrapping="Wrap" FontSize="36"/>
             <Grid Grid.Column="1" Grid.Row="2">
-                <ScrollViewer VerticalScrollBarVisibility="Hidden" PanningMode="VerticalFirst" Margin="10,0,0,0">
+                <ScrollViewer VerticalScrollBarVisibility="Hidden" PanningMode="VerticalFirst">
                     <StackPanel x:Name="ItemDetailsStackPanel"/>
                 </ScrollViewer>
 
@@ -52,6 +59,8 @@
                 <Button x:Name="ViewButton" Content="View" Margin="15,5,15,15" FontSize="48" Click="ViewButton_Click" IsEnabled="False"/>
                 <Button x:Name="QuitButton" Content="Quit" Margin="15,5,15,15" FontSize="48" Click="QuitButton_Click"/>
             </UniformGrid>
+            <Border BorderBrush="Black" BorderThickness="1" Grid.Row="1" Grid.ColumnSpan="3">
+            </Border>
 
         </Grid>
     </Viewbox>
