--- a/LocationModifier2/Dialogs/MsgDialog.xaml
+++ b/LocationModifier2/Dialogs/MsgDialog.xaml
@@ -5,16 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LocationModifier2.Dialogs"
         mc:Ignorable="d"
-        Title="MsgDialog" Height="300" Width="300" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="None" Background="#FF0000E8">
+        Title="MsgDialog" Height="300" Width="300" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="None" Background="#FF0000AE">
     <Border BorderBrush="Black" BorderThickness="1">
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="41*"/>
-                <RowDefinition Height="174*"/>
-                <RowDefinition Height="54*"/>
+                <RowDefinition Height="57*"/>
+                <RowDefinition Height="181*"/>
+                <RowDefinition Height="60*"/>
             </Grid.RowDefinitions>
-            <TextBlock x:Name="TitleBlock" HorizontalAlignment="Center" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Center" FontSize="30" Foreground="White"/>
-            <TextBlock x:Name="MessageBlock" HorizontalAlignment="Center" Grid.Row="1" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" FontSize="24" Foreground="White"/>
+            <TextBlock x:Name="TitleBlock" HorizontalAlignment="Center" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Center" FontSize="30" Foreground="White" Height="40" Width="125"/>
+            <TextBlock x:Name="MessageBlock" HorizontalAlignment="Center" Grid.Row="1" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Center" FontSize="24" Foreground="White"/>
             <Button x:Name="ConfirmButton" Content="OK" HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="110" Height="34" Click="ConfirmButton_Click" FontSize="18" Background="#72919191" BorderBrush="{x:Null}" Foreground="White"/>
             <Button x:Name="CancelButton" Content="Cancel" HorizontalAlignment="Left" Margin="172,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="110" Height="34" Click="CancelButton_Click" FontSize="18" Background="#72919191" BorderBrush="{x:Null}" Foreground="White"/>
 
