--- a/LocationModifier2/Dialogs/StockEntry.xaml
+++ b/LocationModifier2/Dialogs/StockEntry.xaml
@@ -5,38 +5,39 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LocationModifier2.Dialogs"
         mc:Ignorable="d"
-        Title="StockEntry" Height="750" Width="750" ResizeMode="NoResize" WindowStyle="None" WindowStartupLocation="CenterScreen">
-    <Viewbox Stretch="Fill"><Grid Background="#FF0E0099">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="39*"/>
-            <RowDefinition Height="53*"/>
-            <RowDefinition Height="62*"/>
-            <RowDefinition Height="296*"/>
-        </Grid.RowDefinitions>
-        <Grid>
-            <TextBlock x:Name="LoginTitle" HorizontalAlignment="Center" TextWrapping="Wrap" Text="Please enter an amount" VerticalAlignment="Center" Foreground="White" FontSize="24"/>
-        </Grid>
-        <UniformGrid HorizontalAlignment="Center" Margin="90,29,82,0" Grid.Row="3" Width="278" Rows="4" Columns="3">
-            <Button x:Name="Keypad1" Content="1" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" FontSize="24" Margin="1.5"/>
-            <Button x:Name="Keypad2" Content="2" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" FontSize="24" Margin="1.5"/>
-            <Button x:Name="Keypad3" Content="3" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" FontSize="24" Margin="1.5"/>
-            <Button x:Name="Keypad4" Content="4" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" FontSize="24" Margin="1.5"/>
-            <Button x:Name="Keypad5" Content="5" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" FontSize="24" Margin="1.5"/>
-            <Button x:Name="Keypad6" Content="6" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" FontSize="24" Margin="1.5"/>
-            <Button x:Name="Keypad7" Content="7" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" FontSize="24" Margin="1.5"/>
-            <Button x:Name="Keypad8" Content="8" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" FontSize="24" Margin="1.5"/>
-            <Button x:Name="Keypad9" Content="9" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" FontSize="24" Margin="1.5"/>
-            <Button x:Name="ClearButton" Content="Clear" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" FontSize="24" Margin="1.5" Click="ClearButton_Click"/>
-            <Button x:Name="Keypad0" Content="0" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" FontSize="24" Margin="1.5"/>
-            <Button x:Name="KeypadEnter" Content="Enter" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" FontSize="24" Margin="1.5" Click="KeypadEnter_Click"/>
-        </UniformGrid>
-        <TextBox x:Name="LoginScanBox" HorizontalAlignment="Center" Height="33" Margin="90,10,81,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="279" Background="{x:Null}" BorderBrush="White" Foreground="White" FontSize="24" HorizontalContentAlignment="Center"/>
-        <Border BorderBrush="Black" BorderThickness="1" Grid.RowSpan="4" Visibility="Collapsed">
-        </Border>
-        <Button x:Name="AddButton" Content="Add" Margin="10,10,366,10" Grid.Row="2" RenderTransformOrigin="-0.243,0.883" Background="#72919191" BorderBrush="{x:Null}" Foreground="White" Click="Button_Click"/>
-        <Button x:Name="RemoveButton" Content="Remove" Margin="365,10,10,10" Grid.Row="2" Background="#72919191" BorderBrush="{x:Null}" Foreground="White" Click="RemoveButton_Click"/>
-        <Button x:Name="CancelButton" Content="Cancel" Margin="0,246,400,0" Grid.Row="3" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" Click="CancelButton_Click"/>
-        <Button x:Name="SetButton" Content="Set" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Center" Width="75" Height="42" Background="#72919191" BorderBrush="{x:Null}" Foreground="White" Click="SetButton_Click"/>
+        Title="StockEntry" Height="750" Width="750" ResizeMode="NoResize" WindowStyle="None" WindowStartupLocation="CenterScreen" SizeToContent="WidthAndHeight">
+    <Viewbox Stretch="Fill">
+        <Grid Background="#FF0E0099">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="39*"/>
+                <RowDefinition Height="53*"/>
+                <RowDefinition Height="62*"/>
+                <RowDefinition Height="296*"/>
+            </Grid.RowDefinitions>
+            <Grid>
+                <TextBlock x:Name="LoginTitle" HorizontalAlignment="Center" TextWrapping="Wrap" Text="Please enter an amount" VerticalAlignment="Center" Foreground="White" FontSize="24"/>
+            </Grid>
+            <UniformGrid HorizontalAlignment="Center" Margin="90,29,82,0" Grid.Row="3" Width="278" Rows="4" Columns="3">
+                <Button x:Name="Keypad1" Content="1" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" FontSize="24" Margin="1.5"/>
+                <Button x:Name="Keypad2" Content="2" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" FontSize="24" Margin="1.5"/>
+                <Button x:Name="Keypad3" Content="3" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" FontSize="24" Margin="1.5"/>
+                <Button x:Name="Keypad4" Content="4" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" FontSize="24" Margin="1.5"/>
+                <Button x:Name="Keypad5" Content="5" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" FontSize="24" Margin="1.5"/>
+                <Button x:Name="Keypad6" Content="6" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" FontSize="24" Margin="1.5"/>
+                <Button x:Name="Keypad7" Content="7" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" FontSize="24" Margin="1.5"/>
+                <Button x:Name="Keypad8" Content="8" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" FontSize="24" Margin="1.5"/>
+                <Button x:Name="Keypad9" Content="9" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" FontSize="24" Margin="1.5"/>
+                <Button x:Name="ClearButton" Content="Clear" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" FontSize="24" Margin="1.5" Click="ClearButton_Click"/>
+                <Button x:Name="Keypad0" Content="0" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" FontSize="24" Margin="1.5"/>
+                <Button x:Name="KeypadEnter" Content="Enter" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" FontSize="24" Margin="1.5" Click="KeypadEnter_Click"/>
+            </UniformGrid>
+            <TextBox x:Name="LoginScanBox" HorizontalAlignment="Center" Height="33" Margin="90,10,81,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="279" Background="{x:Null}" BorderBrush="White" Foreground="White" FontSize="24" HorizontalContentAlignment="Center"/>
+            <Border BorderBrush="Black" BorderThickness="1" Grid.RowSpan="4" Visibility="Collapsed">
+            </Border>
+            <Button x:Name="AddButton" Content="Add" Margin="10,10,366,10" Grid.Row="2" RenderTransformOrigin="-0.243,0.883" Background="#72919191" BorderBrush="{x:Null}" Foreground="White" Click="Button_Click" Visibility="Collapsed"/>
+            <Button x:Name="RemoveButton" Content="Remove" Margin="365,10,10,10" Grid.Row="2" Background="#72919191" BorderBrush="{x:Null}" Foreground="White" Click="RemoveButton_Click" Visibility="Collapsed"/>
+            <Button x:Name="CancelButton" Content="Cancel" Margin="0,246,400,0" Grid.Row="3" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" Click="CancelButton_Click"/>
+            <Button x:Name="SetButton" Content="Set" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Center" Width="75" Height="42" Background="#72919191" BorderBrush="{x:Null}" Foreground="White" Click="SetButton_Click" Visibility="Collapsed"/>
 
         </Grid>
     </Viewbox>
