--- a/LocationModifier2/Cool/ItemWindow.xaml
+++ b/LocationModifier2/Cool/ItemWindow.xaml
@@ -17,7 +17,7 @@
                 <RowDefinition/>
                 <RowDefinition Height="7*"/>
             </Grid.RowDefinitions>
-            <Grid Grid.Column="2" Background="Black" Margin="0,0,-2,0">
+            <Grid Grid.Column="2" Background="Black" Margin="0,0,45,0">
                 <TextBlock x:Name="ShortSku" HorizontalAlignment="Center" TextWrapping="Wrap" Text="shortsku" VerticalAlignment="Center" Foreground="White" FontSize="56" FontFamily="Segoe UI Semibold"/>
             </Grid>
             <Viewbox Grid.Column="1">
@@ -43,6 +43,16 @@
                 </Grid>
             </ScrollViewer>
             <TextBox x:Name="ScanBox" TextWrapping="Wrap" Text="scan here pls" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" KeyUp="ScanBox_KeyUp"/>
+            <Button x:Name="button" Content="QUIT" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Center" Width="90" Height="50" RenderTransformOrigin="0.5,0.5" Margin="0,0,-25,0" Background="#FF830000" Foreground="White" FontSize="24" FontWeight="Bold" Click="button_Click">
+                <Button.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform/>
+                        <RotateTransform Angle="90"/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </Button.RenderTransform>
+            </Button>
 
         </Grid>
     </Viewbox>
