--- a/LocationModifier2/Dialogs/MsgDialog.xaml
+++ b/LocationModifier2/Dialogs/MsgDialog.xaml
@@ -14,9 +14,9 @@
                 <RowDefinition Height="60*"/>
             </Grid.RowDefinitions>
             <TextBlock x:Name="TitleBlock" HorizontalAlignment="Center" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Center" FontSize="30" Foreground="White" Height="40" Width="125"/>
-            <TextBlock x:Name="MessageBlock" HorizontalAlignment="Center" Grid.Row="1" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Center" FontSize="24" Foreground="White"/>
-            <Button x:Name="ConfirmButton" Content="OK" HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="110" Height="34" Click="ConfirmButton_Click" FontSize="18" Background="#72919191" BorderBrush="{x:Null}" Foreground="White"/>
-            <Button x:Name="CancelButton" Content="Cancel" HorizontalAlignment="Left" Margin="172,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="110" Height="34" Click="CancelButton_Click" FontSize="18" Background="#72919191" BorderBrush="{x:Null}" Foreground="White"/>
+            <TextBlock x:Name="MessageBlock" HorizontalAlignment="Center" Grid.Row="1" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Center" FontSize="36" Foreground="White"/>
+            <Button x:Name="ConfirmButton" Content="OK" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Center" Width="110" Height="34" Click="ConfirmButton_Click" FontSize="24" Background="#72919191" BorderBrush="{x:Null}" Foreground="White"/>
+            <Button x:Name="CancelButton" Content="Cancel" HorizontalAlignment="Left" Margin="172,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="110" Height="34" Click="CancelButton_Click" FontSize="18" Background="#72919191" BorderBrush="{x:Null}" Foreground="White" Visibility="Collapsed"/>
 
         </Grid>
     </Border>
