--- a/LocationModifier2/Dialogs/MsgDialog.xaml
+++ b/LocationModifier2/Dialogs/MsgDialog.xaml
@@ -5,17 +5,17 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LocationModifier2.Dialogs"
         mc:Ignorable="d"
-        Title="MsgDialog" Height="300" Width="300" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="None" Background="#FF0000AE">
+        Title="MsgDialog" Height="450" Width="450" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="None" Background="#FF0000AE">
     <Border BorderBrush="Black" BorderThickness="1">
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="57*"/>
-                <RowDefinition Height="181*"/>
-                <RowDefinition Height="60*"/>
+                <RowDefinition Height="119*"/>
+                <RowDefinition Height="239*"/>
+                <RowDefinition Height="90*"/>
             </Grid.RowDefinitions>
-            <TextBlock x:Name="TitleBlock" HorizontalAlignment="Center" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Center" FontSize="30" Foreground="White" Height="40" Width="125"/>
+            <TextBlock x:Name="TitleBlock" HorizontalAlignment="Center" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Center" FontSize="48" Foreground="White"/>
             <TextBlock x:Name="MessageBlock" HorizontalAlignment="Center" Grid.Row="1" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Center" FontSize="36" Foreground="White"/>
-            <Button x:Name="ConfirmButton" Content="OK" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Center" Width="110" Height="34" Click="ConfirmButton_Click" FontSize="24" Background="#72919191" BorderBrush="{x:Null}" Foreground="White"/>
+            <Button x:Name="ConfirmButton" Content="OK" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Center" Width="148" Height="70" Click="ConfirmButton_Click" FontSize="36" Background="#72919191" BorderBrush="{x:Null}" Foreground="White" Margin="150,10"/>
             <Button x:Name="CancelButton" Content="Cancel" HorizontalAlignment="Left" Margin="172,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="110" Height="34" Click="CancelButton_Click" FontSize="18" Background="#72919191" BorderBrush="{x:Null}" Foreground="White" Visibility="Collapsed"/>
 
         </Grid>
